[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/materials/scrap.png" type="Texture" id=1]
[ext_resource path="res://sprites/materials/water.png" type="Texture" id=2]
[ext_resource path="res://sprites/materials/wood.png" type="Texture" id=3]
[ext_resource path="res://sprites/materials/plastic.png" type="Texture" id=4]
[ext_resource path="res://sprites/materials/biomass.png" type="Texture" id=5]
[ext_resource path="res://sprites/conveyor/plastic_junction_bot.png" type="Texture" id=6]
[ext_resource path="res://sprites/materials/co2.png" type="Texture" id=7]
[ext_resource path="res://scenes and scripts/conveyor/plastic_junction.gd" type="Script" id=8]
[ext_resource path="res://sprites/conveyor/plastic_junction_top.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "biomass",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "co2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "plastic",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "scrap",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "water",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "wood",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 8, 8 )

[node name="plastic_junction" type="Node2D"]
script = ExtResource( 8 )

[node name="bot" type="AnimatedSprite" parent="."]
frames = SubResource( 47 )
frame = 1
playing = true
centered = false

[node name="bot_ressource" type="AnimatedSprite" parent="."]
visible = false
z_index = 10
frames = SubResource( 48 )
animation = "biomass"
centered = false
offset = Vector2( 2, 2 )

[node name="top" type="AnimatedSprite" parent="."]
z_index = 15
frames = SubResource( 49 )
frame = 1
playing = true
centered = false

[node name="top_ressource" type="AnimatedSprite" parent="."]
visible = false
z_index = 20
frames = SubResource( 48 )
animation = "biomass"
centered = false
offset = Vector2( 2, 2 )

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( 8, 8 )
shape = SubResource( 44 )
